src/styles/components/checkbox/_checkbox.scss
@import '../../settings/prefix';
@import '../../tools/visually-hidden';

@mixin checkbox {
  .#{$prefix}-checkbox {
    position: relative;
    display: inline-flex;
    align-items: center;
    user-select: none;
  }

  .#{$prefix}-checkbox__input {
    @include visually-hidden;
  }

  .#{$prefix}-checkbox__label {
    @include type-style('label-01');

    position: relative;
    display: inline-flex;
    align-items: center;
    color: $checkbox-color-text;
    cursor: pointer;
    gap: $checkbox-size-gap;
  }

  .#{$prefix}-checkbox__label-mark {
    position: relative;
    width: $checkbox-size-width;
    height: $checkbox-size-height;
    background-color: $checkbox-color-background;
    border-radius: $checkbox-border-radius;
    box-shadow: inset 0 0 0 1px $checkbox-color-border;
    color: $color-white;
  }

  .#{$prefix}-checkbox__label-mark::after {
    @include icon-size('xs');

    content: '\f00c';
    font-family: $font-family-icon;
    opacity: 0;
  }

  .#{$prefix}-checkbox__input:indeterminate
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark {
    box-shadow: inset 0 0 0 8px $checkbox-color-border;
  }

  .#{$prefix}-checkbox__input:indeterminate
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark::after {
    content: '\f068';
    opacity: 1;
  }

  .#{$prefix}-checkbox__input:checked
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark {
    box-shadow: inset 0 0 0 8px $checkbox-color-border;
  }

  .#{$prefix}-checkbox__input:checked
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark::after {
    opacity: 1;
  }

  .#{$prefix}-checkbox__input:focus-visible
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark {
    outline: 2px solid $checkbox-color-focus-border;
    outline-offset: 1px;
  }

  .#{$prefix}-checkbox__input:disabled + .#{$prefix}-checkbox__label {
    color: $checkbox-color-disabled-text;
    cursor: not-allowed;
  }

  .#{$prefix}-checkbox__input:disabled
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark {
    box-shadow: inset 0 0 0 1px $checkbox-color-disabled-border;
  }

  .#{$prefix}-checkbox__input:checked:disabled
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark,
  .#{$prefix}-checkbox__input:indeterminate:disabled
    + .#{$prefix}-checkbox__label
    .#{$prefix}-checkbox__label-mark {
    box-shadow: inset 0 0 0 8px $checkbox-color-disabled-border;
    color: $checkbox-color-disabled-text;
  }
}

@include checkbox;

